--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.5",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
